--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_after_recommend.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_after_recommend.html
@@ -41,7 +41,7 @@
             var strIphonenavi = "";
             if (IsWebViewIPhone_Master && strIphonenavi == "Y") {
                 var tmp_url = location.href;
-                history.pushState({ iphonenavi: "Y" }, "iphoneNaviExHandle", tmp_url);
+                history.pushState({iphonenavi: "Y"}, "iphoneNaviExHandle", tmp_url);
                 var tmp_url_rep = tmp_url.replace(/iphonenavi=Y/i, "");
                 location.href = tmp_url_rep;
             }
@@ -51,14 +51,15 @@
     <meta property="og:title" content="CGV 패키지">
     <meta property="og:image" content="http://img.cgv.co.kr/GiftStore/Product/Mobile/List/15463255661470.jpg">
     <meta property="og:description" content="데이트 고민은 그만, CGV패키지가 정답">
-    <meta property="al:ios:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:ios:url"
+          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:ios:app_store_id" content="370441190">
     <meta property="al:ios:app_name" content="CGV">
-    <meta property="al:android:url" content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
+    <meta property="al:android:url"
+          content="cjcgv://deeplink?menuId=COCL01&amp;menuUrl=http://m.cgv.co.kr/WebApp/GiftV5/productDetail.aspx?GG_NO=100057&amp;external_type=KAKAO&amp;ga_campaign_type=SHARE">
     <meta property="al:android:package" content="com.cgv.android.movieapp">
     <meta property="al:android:app_name" content="CGV">
     <!-- [E] 운영소스 상속용 -->
-
     <!--
     [S] 2020.04.20
     작성자 : 이주연
@@ -73,42 +74,23 @@
     <!--  [E] 2020.04.20	-->
 </head>
 <body class="bg_white">
+<!--<img src="../images/phototicket/temp/after.png" width="375" style="position: absolute; z-index:10; top: -20px; opacity: .5" alt="">-->
 <div class="header_wrap" style="display:none;" id="header_wrap"></div>
 <div class="wrap">
-<!--    <img src="../images/phototicket/temp/completed.png" width="375" style="position: absolute; z-index:10; top: -20px; opacity: .5" alt="">-->
-    <!--
-      날짜 : 2020.04.24
-      작성자 : 이주연
-      내용 : nav의 유무에 따라 double 클래스 추가
-     -->
-    <!--
-        날짜 : 2020.04.24
-        작성자 : 이주연
-        내용 :
-           - nav의 타입은 2가지
-           - type_pt : 포토티켓 제작완료/출력완료
-           - type_pt2 : 포토티켓 자랑하기
-    -->
+
     <!-- [S] Header -->
-    <div id="header_box" class="pt_header double">
+    <div id="header_box" class="pt_header">
         <header id="headerTitle">
-            <a class="title_area" href="javascript:void(0);">
-                <i class="sprite sprite-pt sprite-icBack"></i>
-            </a>
-            <div class="title" id="headerTitleArea">내 포토티켓</div>
+            <div class="title_area">
+              <span class="name">내가 자랑한 포토티켓</span>
+            </div>
+            <div class="title" id="headerTitleArea"></div>
             <div class="btn_wrap">
-                <a class="btn_menu" href="javascript:siteMapFn();">
-                    <i class="sprite sprite-pt sprite-icSideMenu"></i>
+                <a class="btn_menu" href="javascript:void(0);">
+                    <i class="sprite sprite-pt sprite-icClose"></i>
                 </a>
             </div>
         </header>
-        <nav id="navMain" class="type_pt" style="position: static; top: initial;">
-            <div class="inner">
-                <a class="_tab" href="javascript:void(0);" onclick="" id="">제작완료(10)</a>
-                <a class="_tab" href="javascript:void(0);" onclick="" id="">출력완료(3)</a>
-                <a class="icon_search" href="javascript:void(0);" onclick="" id=""><i class="sprite sprite-pt sprite-icFilterDate"></i>기간검색</a>
-            </div>
-        </nav>
         <!-- [S] siteMap -->
         <section class="allview_wrap" id="siteMap">
             <div id="fogbg" onclick="javascript:close_sitemapFn()"></div>
@@ -170,123 +152,48 @@
     <!-- [S] Content -->
     <section class="content_wrap container photo_ticket" id="ContainerView">
 
-        <!--  [S] 이벤트 광고 영역     -->
-        <article class="mypt_wrap">
-            <div class="title_wrap">
-                <div class="title">내 포토티켓</div>
-                <div class="all">
-                    <a href="javascript:void(0);">전체보기 <i class="sprite sprite-pt sprite-icTMore"></i></a>
+        <!-- [S] 내가 자랑한 포토티켓 -->
+        <!--
+        작성일 : 2020-04-24
+        작성자 : 이주연
+        내용 : 오직 사진만 나오는 경우 onlyPhoto 클래스 추가
+        -->
+        <!--
+        작성일 : 2020-04-24
+        작성자 : 이주연
+        내용 : 내 포토티켓 자랑하기 경우 myPhoto 클래스 추가
+        -->
+        <article class="myPhtoticketFlip onlyPhoto myPhoto">
+            <div class="badge-area">
+                <p class="btn-badge-grey">
+                  <span class="dday">자랑한 날</span><span class="date">2020.03.31</span>
+                </p>
+            </div>
+            <div class="front">
+                <div class="inner">
+                    <img src="http://img.cgv.co.kr/Movie/Thumbnail/Poster/000079/79273/79273_20170905_0_320.jpg"
+                         alt="">
+<!--                    <input id='checkFront1' type='checkbox' title='checkbox'/>-->
+<!--                    <label for='checkFront1'><span></span></label>-->
+<!--                    <a class="btn-flip _flip" href="javascript:void(0)"><i-->
+<!--                            class="sprite sprite-pt sprite-icCardRotation"></i></a>-->
                 </div>
             </div>
-            <div class="card_wrap">
-                <a class="card" href="javascript:void(0);">
-                    <div class="img">
-                        <img src="../images/phototicket/main/movie@2x.png" alt="영화 이미지">
+            <div class="btn_area">
+                <div class="inner">
+                    <div>
+                        <a class="btn-red btn-lg" href="javascript:void(0);"><i></i>25</a>
                     </div>
-                    <div class="movie_info">
-                        <p class="title">클로젯</p>
-                        <div class="info">
-                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                        <div class="info">
-                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
-                        </div>
+                    <div class="cancel_area">
+                        <a class="btn-cancel" href="javascript:void(0);">자랑취소하기</a>
                     </div>
-                    <!--
-                        작성자 : 이주연
-                        제목 : 뱃지 컬러
-                        내용 : badge-blue(d-day가 10일 초과 경우) / badge-red(d-day가 10일 이하일 경우)
-                     -->
-                    <div class="badge badge-red">
-                        <p class="dday">D-3</p>
-                        <p class="txt">출력가능일</p>
-                    </div>
-                </a>
-                <a class="card" href="javascript:void(0);">
-                    <div class="img">
-                        <img src="../images/phototicket/main/movie2@2x.png" alt="영화 이미지">
-                    </div>
-                    <div class="movie_info">
-                        <p class="title">작은아씨들</p>
-                        <div class="info">
-                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                        <div class="info">
-                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                    </div>
-                    <div class="badge badge-red">
-                        <p class="dday">D-8</p>
-                        <p class="txt">출력가능일</p>
-                    </div>
-                </a>
-                <a class="card" href="javascript:void(0);">
-                    <div class="img">
-                        <img src="../images/phototicket/main/movie3@2x.png" alt="영화 이미지">
-                        <div class="badge_top">+10</div>
-                    </div>
-                    <div class="movie_info">
-                        <p class="title">다크워터스</p>
-                        <p class="tip">광주 충장로점 출력가능</p>
-                        <div class="info">
-                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                        <div class="info">
-                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                    </div>
-                    <div class="badge badge-red">
-                        <p class="dday">D-10</p>
-                        <p class="txt">출력가능일</p>
-                    </div>
-                </a>
-                <a class="card" href="javascript:void(0);">
-                    <div class="img">
-                        <img src="../images/phototicket/main/movie4@2x.png" alt="영화 이미지">
-                    </div>
-                    <div class="movie_info">
-                        <p class="title">어바웃타임(인생영화인생영화)</p>
-                        <div class="info">
-                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                        <div class="info">
-                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                    </div>
-                    <div class="badge badge_blue">
-                        <p class="dday">D-17</p>
-                        <p class="txt">출력가능일</p>
-                    </div>
-                </a>
-                <a class="card" href="javascript:void(0);">
-                    <div class="img">
-                        <img src="../images/phototicket/main/movie5@2x.png" alt="영화 이미지">
-                        <div class="badge_top">+2</div>
-                    </div>
-                    <div class="movie_info">
-                        <p class="title">타오르는 여인의 초상</p>
-                        <div class="info">
-                            <span class="title">관람일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                        <div class="info">
-                            <span class="title">제작일</span><span class="date">2020.03.29(일)</span>
-                        </div>
-                    </div>
-                    <div class="badge badge_blue">
-                        <p class="dday">D-20</p>
-                        <p class="txt">출력가능일</p>
-                    </div>
-                </a>
-                <a class="btn_grey" href="javascript:void(0);">더보기 <i class="sprite sprite-pt sprite-icDownMore"></i>
-                </a>
+                </div>
             </div>
         </article>
+        <!-- [E] 내가 자랑한 포토티켓 -->
 
     </section>
     <!-- [E] Content -->
-
 </div>
-
-
 </body>
 </html>
