--- a/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_app.html
+++ b/cgv_photo_mobile_html/WebContent/pub/Phototicket_main_app.html
@@ -257,7 +257,14 @@
         <script>
             var photoTicketSlider = new Swiper('.slider_wrap .swiper-container', {
                 speed: 400,
-                autoPlay:true,
+                /* [S]
+                날짜 : 2020.04.24
+                내용 :
+                 - autoPlay: true 추가
+                 - 새로고침시 재생되는 버그 수정
+                * */
+                autoPlay: true,
+                /* [E] */
                 autoHeight: false,
                 direction: 'horizontal',
                 loop: false,
