--- a/cgv_photo_mobile_html/WebContent/pub/phototicket_index.html
+++ b/cgv_photo_mobile_html/WebContent/pub/phototicket_index.html
@@ -140,6 +140,14 @@
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓 </td>
+					 <td>조회기간 팝업</td>
+					 <td class="filelink"><a href="./Phototicket_popup_search.html" title="새창열림" target="_blank">./Phototicket_popup_search.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓 </td>
 					 <td>제작완료</td>
 					 <td class="filelink"><a href="./Phototicket_completed.html" title="새창열림" target="_blank">./Phototicket_completed.html</a></td>
 					 <td class="hidden-phone">완료</td>
@@ -147,7 +155,7 @@
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
-					 <td>포토티켓 </td>
+					 <td>포토티켓</td>
 					 <td>출력완료</td>
 					 <td class="filelink"><a href="./Phototicket_printed.html" title="새창열림" target="_blank">./Phototicket_printed.html</a></td>
 					 <td class="hidden-phone">완료</td>
@@ -155,11 +163,35 @@
 				 </tr>
 				 <tr>
 					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓</td>
+					 <td>포토티켓 자랑하기</td>
+					 <td class="filelink"><a href="./Phototicket_myticket_boast.html" title="새창열림" target="_blank">./Phototicket_myticket_boast.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
 					 <td>포토티켓 </td>
 					 <td>제작완료_자랑취소 A/뒷면</td>
-					 <td class="filelink"><a href="./Phototicket_completed_boast.html" title="새창열림" target="_blank">./Phototicket_completed_boast.html</a></td>
+					 <td class="filelink"><a href="Phototicket_completed_boast.html" title="새창열림" target="_blank">./Phototicket_completed_boast.html</a></td>
 					 <td class="hidden-phone">진행중</td>
 					 <td class="hidden-phone"></td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓</td>
+					 <td>포토티켓자랑하기_상세(추천전)</td>
+					 <td class="filelink"><a href="./Phototicket_recommend_type1.html" title="새창열림" target="_blank">./Phototicket_recommend_type1.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone">버튼 클릭시 SVG애니메이션 추가 작업 필요(20.04.24)</td>
+				 </tr>
+				 <tr>
+					 <td class="no hidden-phone"><!-- 번호 --></td>
+					 <td>포토티켓</td>
+					 <td>포토티켓자랑하기_상세(내가 자랑한 포토티켓)</td>
+					 <td class="filelink"><a href="./Phototicket_after_recommend.html" title="새창열림" target="_blank">./Phototicket_after_recommend.html</a></td>
+					 <td class="hidden-phone">완료</td>
+					 <td class="hidden-phone">버튼 클릭시 SVG애니메이션 추가 작업 필요(20.04.24)</td>
 				 </tr>
             </tbody>
         </table>
